Fixed z-index in global loader container

--- a/css/play.css
+++ b/css/play.css
@@ -15,7 +15,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
-  z-index: 10;
+  z-index: 10000;
   display: none;
 }
 
